Improve reuse